crates/strider/tests/snapshots/x64__complex__multi_arg_call_in_branch.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x401290:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "11" -> "5" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "12" -> "5" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "13" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" -> "13" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nRDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v15" [color="#888888", style=dashed];
  "v15" -> "13" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "v16" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v16" [color="#888888", style=dashed];
  "v16" -> "13" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "v17" [label="Post Call\nXMM1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v17" [color="#888888", style=dashed];
  "v17" -> "13" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "14" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "18" -> "14" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "18" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v21" [label="Post Call\nRAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v21" [color="#888888", style=dashed];
  "v21" -> "19" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "12" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "22" -> "12" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "22" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "22" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "23" [label="arg[1] ← RSI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="arg[3] ← ECX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "11" -> "10" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "24" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "24" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "24" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "25" [label="arg[2] ← RDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "22" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "6" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "26" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v27" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v27" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "28" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x401397:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "26" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "29" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "29" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "30" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "29" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x401290:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "32" -> "29" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "29" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "33" -> "29" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "11" -> "29" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "12" -> "29" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "34" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "29" -> "34" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "29" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "34" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "v36" [label="Post Call\nRDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "29" -> "v36" [color="#888888", style=dashed];
  "v36" -> "34" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "v37" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "29" -> "v37" [color="#888888", style=dashed];
  "v37" -> "34" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "v38" [label="Post Call\nXMM1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "29" -> "v38" [color="#888888", style=dashed];
  "v38" -> "34" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "35" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "39" -> "35" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "39" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v42" [label="Post Call\nRAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "29" -> "v42" [color="#888888", style=dashed];
  "v42" -> "40" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "33" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "22" -> "33" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "32" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "11" -> "32" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "30" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "26" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v43" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v43" -> "30" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "44" -> "30" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x4013aa:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "45" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "45" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "47" -> "45" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "47" [label="arg[0] ← RDI", shape=Mdiamond, fillcolor="#1a3a5c"];
}
